[package]
name = "bsc-discord-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

# EVM / BNB Chain
alloy = { version = "0.1", features = ["full", "pubsub"] }

# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Utils
regex = "1"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
